<resources>
    <string name="app_name">TestLayout</string>
    <string name="type_your_info_here">type_your_info_here</string>
    <string name="button">button</string>
    <string name="switch_option">switch_option</string>
    <string name="checkbox">checkbox</string>
    <string name="person_name">person_name</string>
    <string name="phone">phone</string>
    <string name="number">number</string>
    <string name="password">password</string>
    <string name="e_mail">e_mail</string>
</resources>