<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity">

    <EditText
        android:id="@+id/edit1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="personName"
        android:hint="@string/person_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edit2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Phone"
        android:hint="@string/phone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/edit3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Number"
        android:hint="@string/number"
        android:inputType="number" />

    <EditText
        android:id="@+id/edit4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Password"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edit5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="email"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress" />

    <CalendarView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</androidx.appcompat.widget.LinearLayoutCompat>